# montehasko

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cabal-scaffold.yaml  cabal.project  cabal.project.freeze  montehasko.cabal
.github/workflows/: haskell.yml
ci/configs/: ghc-9.10.2.project  ghc-9.12.1.project  ghc-9.12.2.project
ci/scripts/: collect-bins.sh
doctest/: Main.hs
montehasko/: README.md  montehasko.cabal
montehasko-charts/: CHANGELOG.md  LICENSE  README.md  montehasko-charts.cabal
montehasko-charts/app/: Main.hs
montehasko-charts/doctest/: DocTest.hs
montehasko-charts/src/Math/Statistics/MonteCarlo/: Chart.hs
montehasko-charts/src/Math/Statistics/MonteCarlo/Chart/: App.hs
montehasko/app/: LICENSE
montehasko/src/Math/Statistics/: RandomVar.hs
montehasko/src/Math/Statistics/MonteCarlo/: Integration.hs  Pi.hs  Sampler.hs
montehasko/test/Math/Statistics/: RandomVarSpec.hs
montehasko/test/Math/Statistics/MonteCarlo/: SamplerSpec.hs
src/Math/Statistics/: RandomVar.hs
src/Math/Statistics/MonteCarlo/: Integration.hs  Pi.hs  Sampler.hs
test/Math/Statistics/: RandomVarSpec.hs
